Fixed item image overflow bug

--- a/src/App.css
+++ b/src/App.css
@@ -195,9 +195,11 @@
 }
 
 .item-popup-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 50%;
   padding: 5px;
-  align-self: center;
   border-right: 1px solid black;
 }
 
